[gd_scene load_steps=11 format=3 uid="uid://cnf46ap2io83d"]

[ext_resource type="Script" uid="uid://cdx1s02lomp7v" path="res://Scripts/cabinet.gd" id="1_imhc6"]
[ext_resource type="AudioStream" uid="uid://68etlxi6pjct" path="res://Assets/Sound/Cabinet/cabinet_open.mp3" id="4_4e4eg"]
[ext_resource type="Texture2D" uid="uid://csn6d058hdt35" path="res://Assets/Sprites/objects.png" id="4_i6gei"]
[ext_resource type="AudioStream" uid="uid://dxglmkckg1hcx" path="res://Assets/Sound/Cabinet/cabinet_close.mp3" id="5_jeqn1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ogna"]
size = Vector2(25, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6gei"]
size = Vector2(29, 39)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_i6gei"]
polygon = PackedVector2Array(-13, -16, 12, -16, 12, 16, -13, 16)

[sub_resource type="Gradient" id="Gradient_5ixxa"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4e4eg"]
gradient = SubResource("Gradient_5ixxa")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)
metadata/_snap_enabled = true
metadata/_snap_count = 2

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_6ogna"]
polygon = PackedVector2Array(-20, -16, -18, -16, -17, -14, -11, 9, -11, -16, 12, -16, 12, 16, -13, 16, -13, 10, -14, 10, -20, -13)

[node name="Cabinet" type="StaticBody2D"]
script = ExtResource("1_imhc6")

[node name="ClosedCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_6ogna")
disabled = true

[node name="OpenedCollisionPolygon" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-11, -16, 12, -16, 12, 16, -13, 16, -13, 14, -20, -13, -20, -16, -18, -16, -17, -14, -11, 9)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-16.5, -3.5)
shape = SubResource("RectangleShape2D_i6gei")

[node name="OpenCloseTimer" type="Timer" parent="."]
one_shot = true

[node name="OpenAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_4e4eg")

[node name="CloseAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jeqn1")

[node name="OpenAudioTimer" type="Timer" parent="."]
one_shot = true

[node name="CloseAudioTimer" type="Timer" parent="."]
one_shot = true

[node name="Toggles" type="Node2D" parent="."]
position = Vector2(-8, 0)

[node name="ClosedLightOccluder" type="LightOccluder2D" parent="Toggles"]
visible = false
position = Vector2(8, 0)
occluder = SubResource("OccluderPolygon2D_i6gei")

[node name="ClosedPointLight" type="PointLight2D" parent="Toggles"]
visible = false
position = Vector2(-5, 0)
scale = Vector2(1.0625, 1.0625)
texture = SubResource("GradientTexture2D_4e4eg")

[node name="OpenPointLight" type="PointLight2D" parent="Toggles"]
position = Vector2(4, 0)
scale = Vector2(0.49999997, 0.5000002)
texture = SubResource("GradientTexture2D_4e4eg")

[node name="OpenedLightOccluder" type="LightOccluder2D" parent="Toggles"]
position = Vector2(8, 0)
occluder = SubResource("OccluderPolygon2D_6ogna")

[node name="ClosedSprite" type="Sprite2D" parent="Toggles"]
visible = false
position = Vector2(4, 0)
rotation = 1.5707964
texture = ExtResource("4_i6gei")
region_enabled = true
region_rect = Rect2(511.9806, 0, 31.98639, 32.09189)

[node name="OpenedSprite" type="Sprite2D" parent="Toggles"]
position = Vector2(4, 0)
rotation = 1.5707964
texture = ExtResource("4_i6gei")
region_enabled = true
region_rect = Rect2(480, 0, 31.991425, 32)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="OpenCloseTimer" to="." method="_on_open_close_timer_timeout"]
[connection signal="timeout" from="OpenAudioTimer" to="." method="_on_open_audio_timer_timeout"]
[connection signal="timeout" from="CloseAudioTimer" to="." method="_on_close_audio_timer_timeout"]
